fix form alignment
after commit 97dcd371a7d466c5b2e4fe6b020968e18cf950f9 (fix welcome content not centered), in login_ip.php login and password form aren't aligned.

--- a/templates/common/common.css
+++ b/templates/common/common.css
@@ -170,7 +170,7 @@ hr.dashed { border-top: 1px dashed #cccccc; margin: 10px 0; }
 /* MAIN SELECTORS - END */
 
 /* VARIOUS SELECTORS - BEGIN */
-#acp, #forumtable, p, td, th { /*font-size: 1.1em;*/ font-size: 11px; }
+#acp, #forumtable, p, td, th { /*font-size: 1.1em;*/ width: auto; text-align: left; font-size: 11px; }
 #forumtable { width: 100%; margin: 0; padding: 0; }
 #forumtable p { margin: 0; text-align: left; }
 #content { padding: 2px 7px 5px 7px; text-align: center; }
